# ArbolesArchivados

./: CMakeLists.txt  Makefile  README.md  arboles_archivados  cochito.json  compile_fix.sh  demo.sh  demo_commands.txt  ejemplo_completo.json  estado_actual  guardado  main.cpp  plis.json  prueba_dia5_6  tactico.json  test_integracion.txt  test_minimo.json  test_simple.json  test_state.json  test_tree.json  testo
Demo/: Install.md  comandos_resumen.md  demo_rapida.sh
docs/: README_dia5_6.md  cronograma.md  estructuras.md  json_format.md  mvp.md  test_cases.md
src/: ConsoleInterface.cpp  ConsoleInterface.hpp  FileSystemTree.cpp  FileSystemTree.hpp  JsonHandler.cpp  JsonHandler.hpp  SearchEngine.cpp  SearchEngine.hpp  TreeNode.cpp  TreeNode.hpp  Trie.cpp  Trie.hpp  main.cpp  main_dia5_6.cpp  prueba_dia4.cpp
